# cppad-minimal-cmake

./: CMakeLists.txt  build-command.txt
src/: main.cpp  newton_raphson.cpp  newton_raphson2.cpp
